<resources>

    <string name="app_name">AABasketballPlayers</string>
    <string name="team">Team :</string>
    <string name="player_name">Player Name :</string>
    <string name="hello">Hello</string>
    <string name="open_view_pager">Open View Pager</string>
    <string name="startservice">Start service</string>
    <string name="restartservice">Restart service</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop_service">Stop service</string>
    <string name="open_counter">Counter</string>


    <string name="list_date_format">Date discovered: %1$s</string>
    <string name="plus">+</string>
    <string name="multi">*</string>
    <string name="div">/</string>
    <string name="toast">Toast</string>
    <string name="open_activity">open activity</string>
    <string name="note_title">Note Title</string>
    <string name="title_activity_main2">Main2Activity</string>


</resources>
